<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GetNZB</string>
    <string name="aboutVersion">GetNZB v 0.0</string>
    <string name="aboutDescription">GetNZB is an Android application for searching http://www.nzbs.org, retrieving .nzb files and uploading them to a FTP server or directly to a HellaNZB server.</string>
    <string name="aboutHelpDevelopment">GetNZB is free software released under GPLv3. You can help develop this software by posting suggestions and/or bugreports on http://getnzb.googlecode.com</string>
	<string name="aboutAuthor">(C) 2010 Robin van Leeuwen - robinvanleeuwen@gmail.com</string>
	<string name="aboutCredits">Credits go to the authors of HellaDroid, XMLRPC and HTMLCleaner.</string>
    
    <string name="preferencesNzbsUsername">Username of nzbs.org account</string>
	<string name="preferencesNzbsUsernameDefault"></string>
	<string name="preferencesNzbsPassword">Password of nzbs.org account</string>
	<string name="preferencesNzbsPasswordDefault"></string>
	
	<string name="preferencesPreferredUploadMethod">Preferred Upload Method for local files.</string>
	
	<string name="preferencesPreferredNewsgrabber">Which newsgrabber do you want to monitor?</string>
	<string name="preferencesUpdateNewsgrabberInterval">Newsgrabber update interval in milliseconds.</string>	
	
	<string name="preferencesHellaNZBHostname">Hostname of HellaNZB server</string>
	<string name="preferencesHellaNZBHostnameDefault"></string>
	<string name="preferencesHellaNZBPort">HellaNZB server port</string>
	<string name="preferencesHellaNZBPortDefault">8760</string>
	<string name="preferencesHellaNZBPassword">Password of HellaNZB server</string>
	
	<string name="preferencesFTPHostname">Hostname of FTP server</string>
	<string name="preferencesFTPHostnameDefault"></string>
	<string name="preferencesFTPUsername">Username for FTP server</string>
	<string name="preferencesFTPUsernameDefault"></string>
	<string name="preferencesFTPPassword">Password for FTP server</string>
	<string name="preferencesFTPPasswordDefault"></string>
	<string name="preferencesFTPPort">Portnumber of FTP server</string>
	<string name="preferencesFTPPortDefault">21</string>
	<string name="preferencesFTPUploadPath">Upload file to directory</string>
	<string name="preferencesFTPUploadPathDefault">~/</string>

	<string name="preferencesDropboxUsername">Dropbox account (email)</string>	
	<string name="preferencesDropboxPassword">Password for Dropbox account</string>
	
	<string name="hellanzb_deleteFile">Delete File</string>	
	<string name="hellanzb_moveTop">Move to top</string>
	<string name="hellanzb_moveBottom">Move to bottom</string>
	<string name="hellanzb_moveUp">Move up</string>
	<string name="hellanzb_moveDown">Move down</string>
	
	<string name="localFileList_deleteFile">Delete File</string>
	<string name="localFileList_infoFile">File Information</string>
	<string name="localFileList_uploadFTP">Upload to FTP server</string>
	<string name="localFileList_uploadHellaNZB">Upload to HellaNZB server</string>
	<string name="localFileList_uploadDropbox">Upload to Dropbox account</string>
	<string name="deleteMySearch">Delete Search</string>
	<string name="editMySearch">Edit Search</string>

</resources>
