<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="www.nzbs.org preferences" >
  		<EditTextPreference 
			android:key="nzbsusername" 
			android:title="nzbs username" 
			android:summary="@string/preferencesNzbsUsername"
			android:defaultValue="@string/preferencesNzbsUsernameDefault"
			/>
  		<EditTextPreference 
			android:key="nzbspassword" 
			android:title="nzbs password" 
			android:summary="@string/preferencesNzbsPassword"
			android:defaultValue="@string/preferencesNzbsPasswordDefault"
			android:password="true"
			/>
  </PreferenceCategory>
  <PreferenceCategory android:title="www.nzbs.org preferences" >
  		<EditTextPreference 
			android:key="hellanzb_hostname" 
			android:title="HellaNZB hostname" 
			android:summary="@string/preferencesHellaNZBHostname"
			android:defaultValue="@string/preferencesHellaNZBHostnameDefault"
			/>
  			<EditTextPreference 
			android:key="hellanzbport" 
			android:title="HellaNZB Port" 
			android:summary="@string/preferencesHellaNZBPort"
			android:defaultValue="@string/preferencesHellaNZBPortDefault"
			/>
  			<EditTextPreference 
			android:key="hellanzbpassword" 
			android:title="HellaNZB Password" 
			android:summary="@string/preferencesHellaNZBPassword"
			android:defaultValue="@string/preferencesHellaNZBPasswordDefault"
			android:password="true"
			/>
  	
  </PreferenceCategory>  
</PreferenceScreen>
